--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "himanirathi"
+    "url": "https://github.com/HimaniRathi/react-native-jumbled-sentence"
   },
   "keywords": [
     "react",
